Fix scrollbar problem in pages containing title divisions (e.g. members)
Submitted by: Maria Malidaki

--- a/public_html/images/styles.css
+++ b/public_html/images/styles.css
@@ -111,7 +111,7 @@
      font-size: large;
      margin-bottom: 10pt;
      padding-left: 10px;
-     width: 100%;
+     width: 98%;
    }
 
    .title a:link , .title a:visited , .title a:active {
